Fixed a visual error on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -1270,7 +1270,7 @@
   .home-text-animation {
     white-space: nowrap;
     overflow: hidden;
-    width: 21.5%;
+    width: 100%;
     animation: 
       typing 1s,
       cursor .4s
